# finance-control

./: .gitignore  GEMINI.md  pyproject.toml
docs/aulas/: 01_clean_architecture_e_dtos.md  02_tdd_red_green_refactor.md  03_principios_solid.md  04_arquitetura_e_fatias_verticais.md
docs/historico/: 2026-03-04_sessao_01.md  2026-03-05_sessao_02.md
src/main/api/: app.py
src/modules/transactions/: routes.py  routes_credit_cards.py
src/modules/transactions/adapters/repositories/: credit_card_repository.py  models.py  transaction_repository.py
src/modules/transactions/core/entities/: credit_card.py  credit_card_transaction.py  transaction.py  value_objects.py
src/modules/transactions/core/interfaces/: credit_card_repository.py  repository.py
src/modules/transactions/core/services/: installment_generator.py
src/modules/transactions/use_cases/: add_credit_card_expense.py  create_transaction.py  get_transactions.py  register_credit_card.py
src/modules/users/: routes.py  routes_auth.py
src/modules/users/adapters/cryptography/: bcrypt_hasher.py  jwt_adapter.py
src/modules/users/adapters/repositories/: models.py  user_repository.py
src/modules/users/core/dtos/: login_dto.py  register_user_dto.py
src/modules/users/core/entities/: user.py  value_objects.py
src/modules/users/core/interfaces/: cryptography.py  jwt_manager.py  repository.py
src/modules/users/entities/: user.py
src/modules/users/use_cases/: authenticate_user.py  register_user.py
tests/integration/modules/transactions/: test_transaction_repository.py
tests/integration/modules/users/: test_bcrypt_hasher.py  test_user_repository.py
tests/unit/modules/transactions/: test_credit_card_entity.py  test_credit_card_transaction.py  test_installment_generator.py
tests/unit/modules/users/: test_authenticate_user.py  test_register_user.py  test_user.py  test_user_entity.py  test_value_object.py
